# advent

./: README.md  pyproject.toml
src/advent/: cli.py  day01.py  day02.py  day03.py  day04.py  day05.py
test/: test_advent.py
