[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"advent.inputs"= ["*.txt"]

[project]
dynamic = ["version"]
name = "advent"
description = "Overengineered setup for the few advent of code exercises I'll do before falling off the wagon"
readme = "README.md"
dependencies = ["click==8"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest==7"]

[project.scripts]
advent = "advent.cli:cli"
